Bug 428758 - Context menus stack in system tray
Summary: Context menus stack in system tray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.20.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-06 14:41 UTC by Bohdan Danylchenko
Modified: 2020-11-09 16:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
video demonstrating the bug in action (1.40 MB, video/mp4)
2020-11-06 14:41 UTC, Bohdan Danylchenko
Details
image showing the bug in action (101.94 KB, image/png)
2020-11-06 14:43 UTC, Bohdan Danylchenko
Details
the same could be done not in hidden icons, just do same in the tray (608.34 KB, video/mp4)
2020-11-06 14:52 UTC, Bohdan Danylchenko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bohdan Danylchenko 2020-11-06 14:41:13 UTC
Created attachment 133086 [details]
video demonstrating the bug in action

SUMMARY
Context menu stack on top of each other in System tray hidden icons.

STEPS TO REPRODUCE
1. Install KClock (probably any application with tray icon and without context menu will work)
2. Open system tray hidden icons
3. Do right-click on the KClock daemon
4. Do right-click on any application with a context menu
5. Do right-click on any other application with a context menu

OBSERVED RESULT
Context menu stack on top of each other every time I open them

EXPECTED RESULT
Context menu closes after opening another


SOFTWARE/OS VERSIONS
Manjaro Linux 20.2
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.75
Qt Version: 5.15
Comment 1 Bohdan Danylchenko 2020-11-06 14:43:16 UTC
Created attachment 133087 [details]
image showing the bug in action
Comment 2 Bohdan Danylchenko 2020-11-06 14:52:00 UTC
Created attachment 133088 [details]
the same could be done not in hidden icons, just do same in the tray

I've found that the same works outside of hidden icons - in the tray panel. Just right-click KClock and all other context menus stack
Comment 3 Nate Graham 2020-11-06 18:04:20 UTC
Are you using Wayland, or X11?
Comment 4 Bohdan Danylchenko 2020-11-06 18:20:54 UTC
(In reply to Nate Graham from comment #3)
> Are you using Wayland, or X11?

I am using X11. And I just tried to do the same on Wayland and I can not reproduce the bug there
Comment 5 Nate Graham 2020-11-06 18:29:17 UTC
How odd. I cannot reproduce on X11 with my set of system tray items, but I know we've had various issues of this sort in the past with some 3rd-party applets.
Comment 6 Bohdan Danylchenko 2020-11-06 19:07:36 UTC
(In reply to Nate Graham from comment #5)
> How odd. I cannot reproduce on X11 with my set of system tray items, but I
> know we've had various issues of this sort in the past with some 3rd-party
> applets.

I think I don't use any applets that could affect this. Just some KDE Connect or Redshift ones. Is there anything more I can do to help figure out the reasons it happens?
Comment 7 Konrad Materka 2020-11-07 12:59:20 UTC
I was able to reproduce (X11), but for me it happens randomly. Just right click until it happens, sometimes can reproduce quickly, sometimes take a lot of time. I can't find any patter here...
Comment 8 Bug Janitor Service 2020-11-07 15:46:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/428
Comment 9 Nate Graham 2020-11-09 16:20:53 UTC
Git commit c1d35c0a434f05fd24c04a2335609df03fd90d47 by Nate Graham, on behalf of Konrad Materka.
Committed on 09/11/2020 at 16:19.
Pushed by ngraham into branch 'master'.

[applets/systemtray] Do not try to show empty SNI context menu

SNI can return empty context menu (on right click).
Do not try to show it.
FIXED-IN: 5.21

M  +1    -1    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c1d35c0a434f05fd24c04a2335609df03fd90d47