[applets/systemtray] Do not try to show empty SNI context menu

SNI can return empty context menu (on right click).
Do not try to show it.

BUG: 428758
FIXED-IN: 5.21